# TFTTRAIT8BALL

./: Cargo.toml  README.md  optimal_comps.json  optimal_comps_2.json
src/: lib.rs  main.rs
src/api/: fetch.rs
src/models/: champions.rs  mod.rs  state.rs
src/optimiser/: brute.rs  constrained_finder.rs  greedy.rs  mod.rs
src/optimiser/trait_calc/: mod.rs  trait_activation.rs
src/ui/: app.rs  mod.rs  tui.rs
src/ui/selector/: auto.rs  champion.rs  mod.rs  trait_selector.rs
